; ModuleID = '/home/carl/AnghaBench/nnn/src/extr_nnn.c_join.c'
source_filename = "/home/carl/AnghaBench/nnn/src/extr_nnn.c_join.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@F_NOWAIT = common dso_local global i32 0, align 4
@SIGHUP = common dso_local global i32 0, align 4
@oldsighup = common dso_local global i32 0, align 4
@SIGTSTP = common dso_local global i32 0, align 4
@oldsigtstp = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @join to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @join(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 65535, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @F_NOWAIT, align 4
  %8 = and i32 %6, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %26, label %10

10:                                               ; preds = %2
  br label %11

11:                                               ; preds = %12, %10
  br label %12

12:                                               ; preds = %11
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @waitpid(i32 %13, i32* %5, i32 0)
  %15 = icmp eq i32 %14, -1
  br i1 %15, label %11, label %16

16:                                               ; preds = %12
  %17 = load i32, i32* %5, align 4
  %18 = call i64 @WIFEXITED(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @WEXITSTATUS(i32 %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @DPRINTF_D(i32 %23)
  br label %25

25:                                               ; preds = %20, %16
  br label %26

26:                                               ; preds = %25, %2
  %27 = load i32, i32* @SIGHUP, align 4
  %28 = load i32, i32* @oldsighup, align 4
  %29 = call i32 @signal(i32 %27, i32 %28)
  %30 = load i32, i32* @SIGTSTP, align 4
  %31 = load i32, i32* @oldsigtstp, align 4
  %32 = call i32 @signal(i32 %30, i32 %31)
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i32 @waitpid(i32, i32*, i32) #1

declare dso_local i64 @WIFEXITED(i32) #1

declare dso_local i32 @WEXITSTATUS(i32) #1

declare dso_local i32 @DPRINTF_D(i32) #1

declare dso_local i32 @signal(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
